Check data saving in tables- Sandeep

--- a/tcm/modules/web/src/main/webapp/pages/custody/td/accttype.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/accttype.xhtml
@@ -157,7 +157,7 @@
 
                 <p:commandLink styleClass="UI-nextButtonFA Fright UI-tcmButton"
                                actionListener="#{tdcto.nextPage}"
-                               update=":ctoForm:tdaccordian, :ctoForm:errorMsg"
+                               update=":ctoForm:tdaccordian, :ctoForm:errorMsg,:ctoForm:submitBtnId"
                                process=":ctoForm:tdaccordian:acctTypePanel"/>
 
             </div>
