--- a/tcm/modules/web/src/main/webapp/pages/custody/td/employment.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/employment.xhtml
@@ -188,11 +188,11 @@
             <div class="Container100 MarTop20" style="margin: 10px 10px;">
             <p:commandLink styleClass="UI-prevButtonFA Fleft"
                            actionListener="#{tdcto.prevPage}"
-                           update=":ctoForm:tdaccordian"  process="@this"/>
+                           update=":ctoForm:tdaccordian,:ctoForm:submitBtnId"  process="@this"/>
 
             <p:commandLink styleClass="UI-nextButtonFA Fright UI-tcmButton"
                            actionListener="#{tdcto.nextPage}"
-                           update=":ctoForm:tdaccordian, :ctoForm:errorMsg"
+                           update=":ctoForm:tdaccordian, :ctoForm:errorMsg,:ctoForm:submitBtnId"
                            process=":ctoForm:tdaccordian:employmenttab"/>
         </div>
         </div>
@@ -358,11 +358,11 @@
     <div class="Container100 MarTop20" style="margin: 10px 10px;">
         <p:commandLink styleClass="UI-prevButtonFA Fleft"
                        actionListener="#{tdcto.prevPage}"
-                       update=":ctoForm:tdaccordian"  process="@this"/>
+                       update=":ctoForm:tdaccordian,:ctoForm:submitBtnId"  process="@this"/>
 
         <p:commandLink styleClass="UI-nextButtonFA Fright UI-tcmButton"
                        actionListener="#{tdcto.nextPage}"
-                       update=":ctoForm:tdaccordian, :ctoForm:errorMsg"
+                       update=":ctoForm:tdaccordian, :ctoForm:errorMsg,:ctoForm:submitBtnId"
                        process=":ctoForm:tdaccordian:employmenttab"/>
             </div>
             </div>
