--- a/tcm/modules/web/src/main/webapp/pages/advisor/vwProfile.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/advisor/vwProfile.xhtml
@@ -15,51 +15,69 @@
             <div class="Container100 Responsive100">
                 <div class="ContainerIndent">
                     <h:form id="form">
-                        <h3>Account#: #{manageAdvisorBean.selectedAccount.acctnum}</h3>
-                        <div class="EmptyBox5"></div>
-                        <p:panelGrid columns="2" rendered="#{not empty manageAdvisorBean.selectedAccount}"
-                                     columnClasses="label,value" styleClass="invNBgrid">
+                        <ui:fragment rendered="#{manageAdvisorBean.selectedAccount.acctStatus != 'Active'}">
+                            <div class="Container100">
+                                <h3>Account#: #{manageAdvisorBean.selectedAccount.acctnum}</h3> (Pending)
+                            </div>
+                        </ui:fragment>
+                        <ui:fragment rendered="#{manageAdvisorBean.selectedAccount.acctStatus == 'Active'}">
+                            <div class="Container100">
+                                <h3>Account#: #{manageAdvisorBean.selectedAccount.clientAccountID}</h3>
+                            </div>
+                            <div class="Container100">
+                                <h4>Name: <h:outputText value="#{manageAdvisorBean.selectedAccount.fullname}"/></h4>
+                            </div>
+                            <div class="Container100">
+                                Email: <h:outputText value="#{manageAdvisorBean.selectedAccount.email}"/>
+                            </div>
+                            <div class="Container100">
+                                Invested:
+                                <h:outputText value="#{manageAdvisorBean.selectedAccount.actualCapital}">
+                                    <f:convertNumber type="currency" currencySymbol="$"/>
+                                </h:outputText>
+                            </div>
+                        </ui:fragment>
 
-                            <h:outputText value="Style"/>
-                            <h:outputText value="#{manageAdvisorBean.selectedAccount.portfolioName}"/>
-
-                            <h:outputText value="Goal"/>
-                            <h:outputText value="#{manageAdvisorBean.selectedAccount.goal}"/>
-
-                            <h:outputText value="Name"/>
-                            <h:outputText value="#{manageAdvisorBean.selectedAccount.fullname}"/>
-
-                            <h:outputText value="Email"/>
-                            <h:outputText value="#{manageAdvisorBean.selectedAccount.email}"/>
-
-                            <h:outputText value="Invested"/>
-                            <h:outputText value="#{manageAdvisorBean.selectedAccount.actualCapital}">
-                                <f:convertNumber type="currency" currencySymbol="$"/>
-                            </h:outputText>
-                        </p:panelGrid>
                         <div class="EmptyBox10"></div>
-                        <p:panelGrid columns="3" rendered="#{not empty manageAdvisorBean.selectedAccount}"
+                        <p:panelGrid columns="2" rendered="#{not empty manageAdvisorBean.selectedAccount}"
                                      columnClasses="label,value,value" styleClass="invNBgrid">
                             <f:facet name="header">
-                                <h:outputText value="Risk Information"/>
+                                <h:outputText value="Investment Objective"/>
                             </f:facet>
 
-                            <h:outputText value="Strategy"/>
+                            <h:outputText value="Goal"/>
                             <h:outputText value="#{manageAdvisorBean.riskCalculator.investmentobjective}">
                             </h:outputText>
-                            <h:outputText value=""/>
 
                             <h:outputText value="Age"/>
                             <h:outputText value="#{manageAdvisorBean.riskCalculator.riskAge}">
                                 <f:convertNumber pattern="##0"/>
                             </h:outputText>
+
+                            <h:outputText value="Retirement"/>
                             <h:outputText value="#{manageAdvisorBean.riskCalculator.retireAge}">
                                 <f:convertNumber pattern="##0"/>
                             </h:outputText>
 
-                            <h:outputText style="font-weight: bold" value="Answer"/>
-                            <h:outputText style="font-weight: bold" value="Value"/>
-                            <h:outputText style="font-weight: bold" value="Risk"/>
+                            <h:outputText value=""/>
+                            <h:outputText value="#{manageAdvisorBean.riskCalculator.retiredStr}">
+                                <f:convertNumber pattern="##0"/>
+                            </h:outputText>
+
+                            <h:outputText value="Horizon"/>
+                            <h:outputText value="#{manageAdvisorBean.riskCalculator.riskHorizon}">
+                                <f:convertNumber pattern="##0"/>
+                            </h:outputText>
+                        </p:panelGrid>
+                        <div class="EmptyBox10"></div>
+
+                        <p:panelGrid columns="3" rendered="#{not empty manageAdvisorBean.selectedAccount}"
+                                     columnClasses="label,value,value" styleClass="invNBgrid">
+                            <f:facet name="header">
+                                <h:outputText style="font-weight: bold" value="Answer"/>
+                                <h:outputText style="font-weight: bold" value="Value"/>
+                                <h:outputText style="font-weight: bold" value="Risk"/>
+                            </f:facet>
 
                             <h:outputText value="Age/Horizon"/>
                             <h:outputText value="#{manageAdvisorBean.riskCalculator.riskHorizon}">
@@ -72,7 +90,7 @@
 
                             <h:outputText value="Answer3"/>
                             <h:outputText value="#{manageAdvisorBean.selectedAccount.ans3}">
-\                            </h:outputText>
+                            </h:outputText>
                             <h:outputText value="#{manageAdvisorBean.riskCalculator.getRiskValue(3)}">
                                 <f:convertNumber pattern="##0"/>
                             </h:outputText>
@@ -92,7 +110,7 @@
                             </h:outputText>
 
                             <h:outputText value="#{manageAdvisorBean.selectedAccount.portfolioName}"/>
-                            <h:outputText value="" />
+                            <h:outputText value=""/>
                             <h:outputText value="#{manageAdvisorBean.riskCalculator.totalRisk}">
                                 <f:convertNumber pattern="##0"/>
                             </h:outputText>
