--- a/tcm/modules/web/src/main/webapp/pages/custody/td/funding.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/funding.xhtml
@@ -375,7 +375,7 @@
                                          style="border: 0px; background: transparent"  >
                                 <p:panel style="border: 0px; background: transparent"  rendered="#{tdcto.tdMasterData.acatDetails.contraFirmList == 'OTH'}">
                                     <label Class="Container100"
-                                           style="text-align: left !important; font-weight: bold !important;">Name of Other Delivery Firm</label>
+                                           style="text-align: left !important; font-weight: bold !important;">Name of Other Delivery Firm *</label>
 
                                     <div class="EmptyBox5"></div>
                                     <p:inputText id="FundOthrID" styleClass="Wid85 FS14 CustomWidthFA-Responsive"
