--- a/Invessence/modules/web/src/main/webapp/pages/custody/td/address.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/custody/td/address.xhtml
@@ -99,7 +99,7 @@
             <p:panel id="ownermailaddressPanel" style="border: 0px; background: transparent; margin-top: -10px;" styleClass="Container80 Responsive100 MarTop5 MarCenter">
                 <div class="Container100">
                     <p:selectBooleanCheckbox value="#{tdcto.tdMasterData.acctholderhasMailing}"
-                                             itemLabel="Diffferent Mailing Address">
+                                             itemLabel="Different Mailing Address">
                         <p:ajax update=":ctoForm:tdaccordian:addresstab:ownermailaddressPanel" listener="${tdcto.tdMasterData.resetAcctholderhasMailing}"/>
                     </p:selectBooleanCheckbox>
                 </div>
