--- a/Invessence/modules/web/src/main/webapp/pages/advisor/index.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/advisor/index.xhtml
@@ -32,7 +32,7 @@
                                 <div class="ContainerIndent">
                                     <i class="fa fa-bell Fs20 animated swing infinite gray"></i>
                                     <span class="Fs14 DispBlock gray FontThemeLight">Messages</span>
-                                    <span class="Fs24 DispBlock red FontThemeLight">#{adashbean.getMessage("Message")}</span>
+                                    <span class="Fs24 DispBlock red FontThemeLight">#{adashbean.getMessage("AdvisorMessage")}</span>
                                 </div>
                             </div>
                         </div>
